new inventory model updated
