# server/controllers/inventory_controller.py
@@ -23,15 +23,21 @@ def add_pn(body):  # noqa: E501
     lot_number = body.lot_number
     quantity = body.quantity
     part_number = body.part_number
+    location = body.location
+    description = body.description
+    status = body.status
+    lead_time = body.lead_time
+    outside_process = body.outside_process
+    remarks = body.remarks
 
     database_object.open_connection()
-    sql_query = "INSERT INTO Paterson_Inventory (part_number,quantity,lot_number) VALUES (%s,%s,%s)"
-    input = (part_number,quantity,lot_number)
+    sql_query = "INSERT INTO Paterson_Inventory (part_number,quantity,lot_number,location,description,status,lead_time,outside_process,remarks) VALUES (%s,%s,%s,%s,%s,%s,%s,%s,%s)"
+    input = (part_number,quantity,lot_number,location,description,status,lead_time,outside_process,remarks)
     logger.debug(input)
     try:
         database_object.update_data(sql_query,input)
     except:
-        logger.error("Unable to update")
+        logger.error("Unable to add new inventory")
         raise
 
     sql_query = "SELECT * FROM Paterson_Inventory WHERE lot_number=%s"
@@ -139,10 +145,17 @@ def update_pn(body):  # noqa: E501
         body = InventoryInfo.from_dict(connexion.request.get_json())  # noqa: E501
     lot_number = body.lot_number
     quantity = body.quantity
+    part_number = body.part_number
+    location = body.location
+    description = body.description
+    status = body.status
+    lead_time = body.lead_time
+    outside_process = body.outside_process
+    remarks = body.remarks
 
     database_object.open_connection()
-    sql_query = "UPDATE Paterson_Inventory SET quantity=%s WHERE lot_number=%s"
-    input = (quantity,lot_number)
+    sql_query = "UPDATE Paterson_Inventory SET quantity=%s, part_number=%s, location=%s, description=%s, status=%s, lead_time=%s, outside_process=%s, remarks=%s WHERE lot_number=%s"
+    input = (quantity,part_number,location,description,status,lead_time,outside_process,remarks,lot_number)
     logger.debug(type(input))
     logger.debug(input)
     try:
@@ -161,7 +174,7 @@ def update_pn(body):  # noqa: E501
         logger.error("Data return is empty")
         raise
 
-    if data[lot_number]["quantity"]==quantity:
+    if data[0]["quantity"]==quantity:
         logger.info("Update successful")
     else:
         logger.error("Unsuccessful update")
